SSR for Search, fix overflow, meta tags

--- a/app/styles/search-results.less
+++ b/app/styles/search-results.less
@@ -21,7 +21,7 @@
   margin: 0 0 10px 20px;
   font-size: 20px;
   line-height: 26px;
-  width: 100%;
+  width: calc(~"100% - 20px");
   text-align: left;
   font-family: @font-family-serif;
 
